Fix grammar in Description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R:
 Description: A wrapper around the C++ library 
     'polylabel' from 'Mapbox', providing an efficient routine for
     finding the approximate pole of inaccessibility of a polygon, which
-    usually serves as an excellent candidate for labeling the polygon.
+    usually serves as an excellent candidate for labeling of a polygon.
 License: MIT + file LICENSE
 Copyright: see file COPYRIGHTS
 Encoding: UTF-8
