--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Authors@R:
     c(person(given = "Johan",
              family = "Larsson",
              role = c("aut", "cre"),
-             email = "mail@larssonjohan.com"),
+             email = "mail@larssonjohan.com",
+             comment = c(ORCID = "0000-0002-4029-5945")),
       person("Mapbox", role = "cph", comment = "polylabel, variant, and geometry libraries"))
 Description: A wrapper around the C++ library 
     'polylabel' from 'Mapbox', providing an efficient routine for
