Make `poi` generic and add methods for simple features classes.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,9 +25,10 @@ LinkingTo:
 Imports: 
     Rcpp
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.1.0
+RoxygenNote: 7.0.2
 Suggests: 
     covr,
     testthat,
-    spelling
+    spelling,
+    sf
 Language: en-US
