Add Travis dependency on libudunits2

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,10 @@ language: R
 sudo: false
 cache: packages
 
+addons:
+  apt:
+    packages:
+      - libudunits2-dev
+
 after_success:
   - Rscript -e 'covr::codecov()'
