--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ sudo: false
 cache: packages
 
 r_binary_packages:
-  units
-  sf
+  - units
+  - sf
 
 after_success:
   - Rscript -e 'covr::codecov()'
