Install units from binary; also install dependencies so it can upgrade.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,10 @@ r_binary_packages:
   - units
   - sf
 
+addons:
+  apt:
+    packages:
+      - libudunits2-dev
+
 after_success:
   - Rscript -e 'covr::codecov()'
