--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     c(person(given = "Johan",
              family = "Larsson",
              role = c("aut", "cre"),
-             email = "mail@larssonjohan.com",
+             email = "johanlarsson@outlook.com",
              comment = c(ORCID = "0000-0002-4029-5945")),
       person(given = "Kent",
              family = "Johnson",
