format description better

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,11 +11,13 @@ Authors@R:
              family = "Johnson",
              role = "ctb",
              email = "kent@kentsjohnson.com"),
-      person("Mapbox", role = "cph", comment = "polylabel, variant, and geometry libraries"))
-Description: A wrapper around the C++ library 
-    'polylabel' from 'Mapbox', providing an efficient routine for
-    finding the approximate pole of inaccessibility of a polygon, which
-    usually serves as an excellent candidate for labeling of a polygon.
+      person("Mapbox", 
+             role = "cph", 
+             comment = "polylabel, variant, and geometry libraries"))
+Description: A wrapper around the C++ library 'polylabel' from 'Mapbox', 
+    providing an efficient routine for finding the approximate pole of 
+    inaccessibility of a polygon, which usually serves as an excellent candidate
+    for labeling of a polygon.
 License: MIT + file LICENSE
 Copyright: see file COPYRIGHTS
 Encoding: UTF-8
