--- a/.github/workflows/update-mapbox-geometry.yaml
+++ b/.github/workflows/update-mapbox-geometry.yaml
@@ -15,31 +15,38 @@ jobs:
       with:
         ref: main
 
-    - name: Checkout mapbox/geometry.hpp
-      uses: actions/checkout@v4
-      with:
-        repository: mapbox/geometry.hpp
-        path: mapbox_geometry
+    - name: Get latest release info
+      id: get_release
+      run: |
+        latest_release=$(curl -s https://api.github.com/repos/mapbox/geometry.hpp/releases/latest)
+        echo "tag_name=$(echo $latest_release | jq -r .tag_name)" >> $GITHUB_ENV
+        echo "tarball_url=$(echo $latest_release | jq -r .tarball_url)" >> $GITHUB_ENV
+
+    - name: Download release tarball
+      run: |
+        curl -L ${{ env.tarball_url }} -o release.tar.gz
+        mkdir release
+        tar -xzf release.tar.gz -C release --strip-components=1
 
     - name: Copy headers
       run: |
         mkdir -p inst/include
-        cp -r mapbox_geometry/include/* inst/include/
+        cp -r release/include/* inst/include/
 
     - name: Commit and push changes
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-        git checkout -b update-geometry-headers
+        git checkout -b update-geometry-headers-${{ env.tag_name }}
         git add inst/include/*
-        git commit -m "Update C++ headers from mapbox/geometry.hpp"
-        git push origin update-geometry-headers
+        git commit -m "Update C++ headers from mapbox/geometry.hpp release ${{ env.tag_name }}"
+        git push origin update-geometry-headers-${{ env.tag_name }}
 
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v7
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        branch: update-geometry-headers
-        title: "Update C++ headers from mapbox/geometry.hpp"
-        body: "Automated update of C++ headers from mapbox/geometry.hpp repository."
+        branch: update-geometry-headers-${{ env.tag_name }}
+        title: "Update C++ headers from mapbox/geometry.hpp release ${{ env.tag_name }}"
+        body: "Automated update of C++ headers from mapbox/geometry.hpp release ${{ env.tag_name }}."
         labels: "automated update"
