--- a/.github/workflows/update-mapbox-geometry.yaml
+++ b/.github/workflows/update-mapbox-geometry.yaml
@@ -33,21 +33,12 @@ jobs:
         mkdir -p inst/include
         cp -r release/include/* inst/include/
 
-    - name: Commit and push changes
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-        git checkout -b update-geometry-headers-${{ env.tag_name }}
-        git add inst/include/*
-        git commit -m "Update C++ headers from mapbox/geometry.hpp release ${{ env.tag_name }}"
-        git push origin update-geometry-headers-${{ env.tag_name }}
-
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v7
       with:
+        title: "Update C++ headers from mapbox/geometry.hpp to release ${{ env.tag_name }}"
+        commit-message: "chore(deps): update mapbox/geometry.hpp to ${{ env.tag_name }}"
         token: ${{ secrets.GITHUB_TOKEN }}
-        base: main
         branch: update-geometry-headers-${{ env.tag_name }}
-        title: "Update C++ headers from mapbox/geometry.hpp release ${{ env.tag_name }}"
         body: "Automated update of C++ headers from mapbox/geometry.hpp release ${{ env.tag_name }}."
         labels: "automated update"
