--- a/.github/workflows/update-mapbox-geometry.yaml
+++ b/.github/workflows/update-mapbox-geometry.yaml
@@ -26,12 +26,13 @@ jobs:
       run: |
         curl -L ${{ env.tarball_url }} -o release.tar.gz
         mkdir release
-        tar -xzf release.tar.gz -C release --strip-components=1
+        tar -xzf release.tar.gz -C tmp --strip-components=1
 
     - name: Copy headers
       run: |
         mkdir -p inst/include
-        cp -r release/include/* inst/include/
+        cp -r tmp/include/* inst/include/
+        rm -rf tmp
 
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v7
