--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Description: A wrapper around the C++ library 'polylabel' from 'Mapbox',
 License: MIT + file LICENSE
 Copyright: see file COPYRIGHTS
 Encoding: UTF-8
-URL: https://github.com/jolars/polylabelr, https://jolars.github.io/polylabelr
+URL: https://github.com/jolars/polylabelr, https://jolars.github.io/polylabelr/
 BugReports: https://github.com/jolars/polylabelr/issues
 Depends:
     R (>= 3.3.0)
